# scratchpad

./: .mcp.json  CLAUDE.md  README.md
.beads/: beads.jsonl
.devcontainer/: Dockerfile  devcontainer.json
claude-uses-approvals/: .gitignore  CLAUDE.md  calculate.py  docstring_parser.py  main.py  pyproject.toml  test.sh  test_calculator.py  test_fizzbuzz.py  test_fizzbuzz.test_fizzbuzz.approved.txt  test_roman.py  test_tictactoe.py  test_word_wrap.py  word_wrap.py
claude-uses-approvals/.claude/: settings.json
fizzbuzz-2025-04-22/: CLAUDE.md  fizzbuzz.py  main.py  pyproject.toml  test_fizzbuzz.py
fizzbuzz-2025-04-26/: .gitignore  CLAUDE.md  fizzbuzz.c  fizzbuzz.js  fizzbuzz.py  test_fizzbuzz.py  test_fizzbuzz_c.py  test_fizzbuzz_py.py
gemini-2.0-flash-verify/: .gitignore  prompt.md  test_verify.py  verify.py
jq-fizzbuzz/: .gitignore  approve.sh  dev.vim  diff  diffwatch  fb.approved  fizzbuzz.jq  fizzbuzz.py  run  thought.md
mm/: CLAUDE.md  README.md  app.tsx  biome.json  bug-report-enter-key.md  cli.tsx  editor-state.test.ts  editor-state.ts  enhanced-layout.test.ts  enhanced-layout.ts  enhanced-mindmap-renderer.tsx  enhanced-navigation.test.ts  enhanced-navigation.ts  formatter.test.ts  formatter.ts  horizontal-layout.test.ts  horizontal-layout.ts  horizontal-mindmap-renderer.tsx  mindmap-formatter.test.ts  mindmap-formatter.ts  mindmap-visual-renderer.tsx  my.mm  navigation.test.ts  navigation.ts  non-existent.mm  package.json  renderer.test.ts  renderer.ts  roundtrip.test.ts  simple-viewer.tsx  test-autosave.mm  test-shift-right.mm  test-tab.mm  viewer.ts  (+4 more)
(+32 files in other folders)
