[project]
name = "claude-uses-approvals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "approvaltests>=14.5.0",
    "pytest>=8.3.5",
    "pytest-approvaltests>=0.2.4",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "approvaltests.*"
ignore_missing_imports = true
